Изменен клиент